# VINS-Lite

./: CMakeLists.txt  README.md  setup.bash
config/: euroc_config.yaml
include/: System.h  estimator.h  feature_manager.h  feature_tracker.h  parameters.h
include/backend/: backend.h  edge.h  edge_imu.h  edge_prior.h  edge_reprojection.h  imu_integration.h  loss_function.h  problem.h  problem_slam.h  vertex.h  vertex_inverse_depth.h  vertex_motion.h  vertex_point3d.h  vertex_pose.h
include/backend/tiny/: tiny_problem.h  tiny_slam_problem.h
include/camodocal/chessboard/: Chessboard.h
include/factor/: integration_base.h
include/initial/: initial_alignment.h  initial_sfm.h
include/vertex/: vertices.h
lib/: CMakeLists.txt
lib/graph_optimization/: CMakeLists.txt  dog_leg.cpp  edge.cpp  edge.h  eigen_types.h  gauss_newton.cpp  lbfgs.cpp  levenberg_marquardt.cpp  loss_function.cpp  loss_function.h  problem.cpp  problem.h  problem_slam.cpp  problem_slam.h  steepest_descent.cpp  vertex.cpp  vertex.h
modules/: CMakeLists.txt
modules/vins_stereo/: CMakeLists.txt  common.h  estimator.cpp  estimator.h  imu_integration.cpp  imu_integration.h  parameters.h
modules/vins_stereo/2d_to_2d/: essential.cpp  homography.cpp
modules/vins_stereo/2d_to_3d/: global_triangulate.cpp  local_triangulate.cpp
modules/vins_stereo/3d_to_2d/: dlt_pnp.cpp  e_pnp.cpp  iter_pnp.cpp  ml_pnp.cpp  pnp.cpp
modules/vins_stereo/bundle_adjustment/: global_bundle_adjustment.cpp  local_bundle_adjustment.cpp
modules/vins_stereo/data_process/: image_process.cpp  imu_process.cpp
modules/vins_stereo/data_structure/: feature.cpp  feature.h  frame.cpp  frame.h  landmark.cpp  landmark.h  map.cpp  map.h
modules/vins_stereo/edge/: edge_align.cpp  edge_align.h  edge_align_linear.cpp  edge_align_linear.h  edge_epipolar.cpp  edge_epipolar.h  edge_imu.cpp  edge_imu.h  edge_pnp.cpp  edge_pnp.h  edge_pnp_sim3.cpp  edge_pnp_sim3.h  edge_reprojection.cpp  edge_reprojection.h
modules/vins_stereo/initialize/: inertial_initialize.cpp  visual_initialize.cpp
modules/vins_stereo/vertex/: vertex_acc_bias.h  vertex_bias.h  vertex_gyro_bias.h  vertex_inverse_depth.cpp  vertex_inverse_depth.h  vertex_motion.cpp  vertex_motion.h  vertex_point3d.cpp  vertex_point3d.h  vertex_pose.cpp  vertex_pose.h  vertex_position.h  vertex_quaternion.cpp  vertex_quaternion.h  vertex_scale.cpp  vertex_scale.h  vertex_spherical.cpp  vertex_spherical.h  vertex_vector.h  vertex_velocity.h
src/: System.cpp  estimator.cpp  feature_manager.cpp  feature_tracker.cpp  parameters.cpp  problem_slam.cc
src/backend/: dog_leg.cc  edge.cc  edge_imu.cc  edge_prior.cpp  edge_reprojection.cc  gauss_newton.cc  imu_integration.cc  levenberg_marquardt.cc  lm.cc  loss_function.cc  problem.cc  problem_slam.cc  steepest_descent.cc  vertex.cc  vertex_inverse_depth.cc  vertex_motion.cc  vertex_point3d.cc  vertex_pose.cc
src/backend/tiny/: dog_leg.cc  gauss_newton.cc  levenberg_marquardt.cc  steepest_descent.cc  tiny_problem.cc  tiny_slam_problem.cc
src/initial/: initial_aligment.cpp  initial_ex_rotation.cpp
test/: CurveFitting.cpp  run_euroc.cpp
